data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1109.wast
;; 10. **Test Ten**:     - `br_table` with a direct jump to a non-existent index after a sequence of valid jumps, all wrapped in a loop that has its own branching logic.     - **Constraint**: Ensures that once an invalid index is hit, the loop's own branching logic is still validated correctly.     - **Relation**: Combines index validation with overall loop block handling and ensures continued correct state management.

(assert_invalid
  (module (func (result i32)
    (loop (block (br_table 0 1 2 3 4 5 (i32.const 1))))
  ))
  "br_table index out of range"
)